# zip_header

./: .gitignore  build_and_run.sh
zip_getter/: CMakeLists.txt  main.cpp
zip_getter/header/: byteSize.h  centralDirectoryFileHeader.h  dataDescriptor.h  endOfCentralDirectory.h  localFileHeader.h  zipHeader.h
zip_getter/source/: centralDirectoryFileHeader.cpp  dataDescriptor.cpp  endOfCentralDirectoryRecod.cpp  localFileHeader.cpp  zipHeader.cpp
